--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
     "singleQuote": true,
     "bracketSpacing": false,
     "quoteProps": "consistent",
-    "printWidth": 120,
+    "printWidth": 120
   }
   
   
